client/src/index.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  /* 10px/16px = 62.5% -> 1rem = 10px */
  font-size: 62.5%;
}

body {
  margin: 0;
  font-family: "Open Sans Condensed", sans-serif;
  font-weight: 300;
  line-height: 1.6;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

:root {
  --color-white: #fff;
  --color-red: rgb(255, 0, 0);

  --color-black-rgb: 0, 0, 0;
  --color-black: rgb(49, 51, 51);
  --color-black-light: rgb(98, 102, 102);

  --color-google: rgb(66, 133, 244);
  --color-google-dark: rgb(10, 72, 175);
}

